# Statguardian

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_LINEAGE_FIRST_CLASS.md  ARCHITECTURE_V2_3_ML_DETECTION.md  ARCHITECTURE_V3_0_STREAMING_VALIDATION.md  AWESOME_PYTHON_SUBMISSION.md  AWESOME_RUST_SUBMISSION.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  HOW_TO_SUBMIT_AWESOME.md  INSTALL.md  Makefile  PRODUCTION_AUDIT_REPORT.md  README.md  RELEASE_ANNOUNCEMENT.md  ROADMAP.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROADMAP_HONEST.md  ROADMAP_INTEGRATED.md  ROADMAP_STATGUARDIAN_V2_2.md  ROADMAP_STATGUARDIAN_V2_3.md  ROADMAP_STATGUARDIAN_V3_0.md  RUST_SAFETY_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  WEEK1_COMPLETE.md  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/statguard-core/: Cargo.toml
crates/statguard-core/src/: ast.rs  error.rs  lib.rs
crates/statguard-core/src/compiler/: dag.rs  mod.rs  optimizer.rs
crates/statguard-core/src/parser/: grammar.pest  mod.rs
crates/statguard-engine/: Cargo.toml
crates/statguard-engine/src/: batch.rs  lib.rs
crates/statguard-io/: Cargo.toml
crates/statguard-io/src/: lib.rs
crates/statguard-metrics/: Cargo.toml
crates/statguard-metrics/src/: lib.rs  report.rs
crates/statguard-py/: Cargo.toml
crates/statguard-py/src/: lib.rs
crates/statguard-stats/: Cargo.toml
crates/statguard-stats/src/: drift.rs  hll.rs  lib.rs  profiler.rs
crates/statguard-validators/: Cargo.toml
crates/statguard-validators/src/: lib.rs  rules.rs  schema.rs
crates/statguardian-core/src/: ast.rs  streaming.rs
crates/statguardian-core/src/compiler/: dag.rs  mod.rs  optimizer.rs
crates/statguardian-core/src/parser/: mod.rs
crates/statguardian-engine/src/: batch.rs  lib.rs
crates/statguardian-io/src/: cloud.rs  delta.rs  iceberg.rs  sql.rs
crates/statguardian-lineage/: Cargo.toml
crates/statguardian-lineage/src/: lib.rs  model.rs  storage.rs
crates/statguardian-py/src/: lib.rs
crates/statguardian-stats/src/: profiler.rs
crates/statguardian-validators/src/: rules.rs
docs/: CLI.md  CONTRIBUTING.md
docs/bench/: benchmark.py
python/statguard/: __init__.py  _cli.py  _connectors.py  _evolution.py  _parallel.py
python/statguardian/: _dsl_validator.py  _lineage.py  cli_workflow.py  error_messages.py  server_workflow.py
tests/: Cargo.toml  integration_test.rs  test_parser.rs  test_python_bindings.py  test_security.rs  test_validators.rs
