[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "statguardian"
version         = "0.1.0"
description     = "Fast, declarative data quality framework. Schema validation, data drift detection, anomaly detection, outlier handling. 13x faster than pandera. Supports Pandas, Polars, DuckDB. Automated data contract enforcement for data pipelines."
authors         = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
license         = { file = "LICENSE" }
readme          = "README.md"
requires-python = ">=3.8"
keywords        = [
    "data-quality",
    "data-validation",
    "schema-validation",
    "data-testing",
    "data-contracts",
    "pandas",
    "polars",
    "duckdb",
    "data-pipeline",
    "etl",
    "data-engineering",
    "data-governance",
    "drift-detection",
    "anomaly-detection",
    "outlier-detection",
    "automated-testing",
    "data-integrity",
    "data-profiling",
    "statistical-analysis",
    "python-library",
    "machine-learning",
    "mlops",
    "data-ops",
    "data-observability"
]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies    = [
    "polars>=0.20",
]

[project.optional-dependencies]
# Data frame conversion
pandas = ["pandas>=1.5", "pyarrow>=10"]

# SQL databases (PostgreSQL, MySQL, SQLite, BigQuery, Snowflake, etc.)
# Note: psycopg2 adds LGPL-2.1 dependency for PostgreSQL support
sql-postgres = ["connectorx>=0.3", "psycopg2-binary>=2.9"]      # Note: LGPL-2.1
sql-mysql    = ["connectorx>=0.3", "pymysql>=1.0"]
sql-sqlite   = ["connectorx>=0.3"]
sql-bigquery = ["google-cloud-bigquery>=3.0", "connectorx>=0.3"]
sql-snowflake = ["snowflake-connector-python>=3.0", "connectorx>=0.3"]
sql-redshift = ["amazon-redshift-python-driver>=1.0", "connectorx>=0.3"]
sql-databricks = ["databricks-sql-connector>=1.0", "connectorx>=0.3"]
sql-clickhouse = ["clickhouse-driver>=0.2", "connectorx>=0.3"]
sql-duckdb   = ["duckdb>=0.8", "connectorx>=0.3"]
sql-trino    = ["trino>=0.20", "connectorx>=0.3"]
sql = [
    "connectorx>=0.3",
    "psycopg2-binary>=2.9",      # PostgreSQL — LGPL-2.1
    "pymysql>=1.0",
    "sqlalchemy>=2.0",           # SQLAlchemy dialect support
]

# Cloud storage (S3, GCS, Azure)
cloud = ["polars[aws,gcp,azure]>=0.44"]

# Apache Spark
spark = ["pyspark>=3.0", "pyarrow>=10"]

# Streaming (planned)
kafka = ["confluent-kafka>=2.0"]  # Roadmap
flink = ["pyflink>=1.17"]         # Roadmap

# Orchestration (planned)
airflow = ["apache-airflow>=2.0"]  # Roadmap

# All optional extras
all = [
    "pandas>=1.5",
    "pyarrow>=10",
    "connectorx>=0.3",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "sqlalchemy>=2.0",
    "google-cloud-bigquery>=3.0",
    "snowflake-connector-python>=3.0",
    "amazon-redshift-python-driver>=1.0",
    "databricks-sql-connector>=1.0",
    "clickhouse-driver>=0.2",
    "duckdb>=0.8",
    "trino>=0.20",
    "pyspark>=3.0",
    "polars[aws,gcp,azure]>=0.44",
]

# Development
dev = ["pytest>=7", "maturin>=1.7", "polars>=0.20", "pandas>=1.5", "pyarrow>=10"]

[project.urls]
Homepage      = "https://github.com/Mullassery/Statguardian"
Repository    = "https://github.com/Mullassery/Statguardian"
Documentation = "https://github.com/Mullassery/Statguardian#readme"
"Bug Tracker" = "https://github.com/Mullassery/Statguardian/issues"
Changelog     = "https://github.com/Mullassery/Statguardian/releases"
"Source Code" = "https://github.com/Mullassery/Statguardian/tree/main"
Discussions   = "https://github.com/Mullassery/Statguardian/discussions"

[project.scripts]
statguardian = "statguardian._cli:main"

[tool.maturin]
manifest-path    = "crates/statguard-py/Cargo.toml"
python-source    = "python"
module-name      = "statguardian._statguardian"
features         = ["pyo3/extension-module"]
profile          = "release"
strip            = true
