[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "statguardian"
version         = "2.1.0"
description     = "Fast, declarative data quality framework. Schema validation, data drift detection, anomaly detection, outlier handling. 13x faster than pandera. Supports Pandas, Polars, DuckDB. Automated data contract enforcement for data pipelines."
authors         = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
license         = { text = "MIT" }
readme          = "README.md"
requires-python = ">=3.8"
keywords        = [
    "data-quality",
    "data-validation",
    "schema-validation",
    "data-testing",
    "data-contracts",
    "pandas",
    "polars",
    "duckdb",
    "data-pipeline",
    "etl",
    "data-engineering",
    "data-governance",
    "drift-detection",
    "anomaly-detection",
    "outlier-detection",
    "automated-testing",
    "data-integrity",
    "data-profiling",
    "statistical-analysis",
    "python-library",
    "machine-learning",
    "mlops",
    "data-ops",
    "data-observability"
]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies    = [
    "polars==0.19.12",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Data frame conversion
pandas = ["pandas==2.3.3", "pyarrow==14.0.1"]

# SQL databases (PostgreSQL, MySQL, SQLite, BigQuery, Snowflake, etc.)
# Note: psycopg2 adds LGPL-2.1 dependency for PostgreSQL support
sql-postgres = ["connectorx>=0.3", "psycopg2-binary>=2.9"]      # Note: LGPL-2.1
sql-mysql    = ["connectorx>=0.3", "pymysql>=1.0"]
sql-sqlite   = ["connectorx>=0.3"]
sql-bigquery = ["google-cloud-bigquery>=3.0", "connectorx>=0.3"]
sql-snowflake = ["snowflake-connector-python>=3.0", "connectorx>=0.3"]
sql-redshift = ["amazon-redshift-python-driver>=1.0", "connectorx>=0.3"]
sql-databricks = ["databricks-sql-connector>=1.0", "connectorx>=0.3"]
sql-clickhouse = ["clickhouse-driver>=0.2", "connectorx>=0.3"]
sql-duckdb   = ["duckdb>=0.8", "connectorx>=0.3"]
sql-trino    = ["trino>=0.20", "connectorx>=0.3"]
sql = [
    "connectorx>=0.3",
    "psycopg2-binary>=2.9",      # PostgreSQL — LGPL-2.1
    "pymysql>=1.0",
    "sqlalchemy==2.0.23",           # SQLAlchemy dialect support
]

# Cloud storage (S3, GCS, Azure)
cloud = ["polars[aws,gcp,azure]>=0.44"]

# Apache Spark
spark = ["pyspark>=3.0", "pyarrow==14.0.1"]

# Streaming (planned)
kafka = ["confluent-kafka>=2.0"]  # Roadmap
flink = ["pyflink>=1.17"]         # Roadmap

# Orchestration (planned)
airflow = ["apache-airflow>=2.0"]  # Roadmap

# All optional extras
all = [
    "pandas==2.3.3",
    "pyarrow==14.0.1",
    "connectorx>=0.3",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "sqlalchemy==2.0.23",
    "google-cloud-bigquery>=3.0",
    "snowflake-connector-python>=3.0",
    "amazon-redshift-python-driver>=1.0",
    "databricks-sql-connector>=1.0",
    "clickhouse-driver>=0.2",
    "duckdb>=0.8",
    "trino>=0.20",
    "pyspark>=3.0",
    "polars[aws,gcp,azure]>=0.44",
]

[project.urls]
Homepage      = "https://github.com/Mullassery/Statguardian"
Repository    = "https://github.com/Mullassery/Statguardian"
Documentation = "https://github.com/Mullassery/Statguardian#readme"
"Bug Tracker" = "https://github.com/Mullassery/Statguardian/issues"
Changelog     = "https://github.com/Mullassery/Statguardian/releases"
"Source Code" = "https://github.com/Mullassery/Statguardian/tree/main"
Discussions   = "https://github.com/Mullassery/Statguardian/discussions"

[project.scripts]
statguardian = "statguardian._cli:main"

[tool.maturin]
manifest-path    = "crates/statguardian-py/Cargo.toml"
python-source    = "python"
module-name      = "statguardian._statguardian"
features         = ["pyo3/extension-module"]
include          = ["LICENSE", "LICENSES.md", "README.md"]
profile          = "release"
strip            = true
