[package]
name    = "statguard-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration_test"
path = "integration_test.rs"

[[test]]
name = "test_parser"
path = "test_parser.rs"

[[test]]
name = "test_validators"
path = "test_validators.rs"

[[test]]
name = "test_security"
path = "test_security.rs"

[dev-dependencies]
statguard-core    = { path = "../crates/statguard-core" }
statguard-engine  = { path = "../crates/statguard-engine" }
polars            = { workspace = true }
serde_json        = { workspace = true }
