[package]
name        = "statguard-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "StatGuard DSL parser, AST, compiler, and execution DAG"

[dependencies]
pest        = { workspace = true }
pest_derive = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
indexmap    = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
