[package]
name        = "statguard-stats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Statistical profiling and drift detection for StatGuard"

[dependencies]
statguard-core = { path = "../statguard-core" }
polars         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
rayon          = { workspace = true }
