[package]
name = "statguardian-lineage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

[dev-dependencies]
